# kdtree_balanced

./: BKDTree.h  BKDTree_build_mex.cpp  BKDTree_build_mex.m  BKDTree_build_mex.mexw64  BKDTree_compile.m  BKDTree_delete_mex.cpp  BKDTree_delete_mex.mexw64  BKDTree_nearest_neighbor_mex.cpp  BKDTree_nearest_neighbor_mex.m  BKDTree_nearest_neighbor_mex.mexw64  CMakeLists.txt  bkdtree_class.h  kdtree_kch.h  kdtree_kch_class.h  kdtree_nearest_neighbor.mexw64  main.asv  main.cpp  main.m  main_comparison.m
ataiya_kdtree_library/: KDTree.h  kdtree_ball_query.mexw64  kdtree_build.mexw64  kdtree_delete.mexw64  kdtree_io_from_mat.mexw64  kdtree_io_to_mat.mexw64  kdtree_k_nearest_neighbors.mexw64  kdtree_nearest_neighbor.cpp  kdtree_range_query.mexw64
